@@ -1,3 +1,7 @@
+2024-04-02 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSURLSession.m: fix for #385
+
 2024-03-11 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSNotificationCenter.m: Ensure class pointer is initialised
